# Estagio

./: README.md  experiencia.rs  experiencia2  experiencia2.rs
DataTypes/: Cargo.toml
DataTypes/src/: main.rs
Exercicios/enums_project/src/: main.rs
Exercicios/experiencia_proj/: Cargo.toml
Exercicios/experiencia_proj/src/: foo.txt
Exercicios/jogo_galo/: Cargo.toml
Exercicios/jogo_galo/src/: main.rs
Exercicios/packages_crates_modules/: Cargo.toml
Exercicios/structure_project/: Cargo.toml
Exercicios/structure_project/src/: main.rs
Exercicios/vector_string_hashmap/: Cargo.toml
Ownership_project/: Cargo.toml
Ownership_project/src/: main.rs
Simulador/Ficheiros/: exemplo.asm
Simulador/src/: processor.rs
enums_project/: Cargo.toml
enums_project/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
experiencia_proj/src/: main.rs  teste
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
packages_crates_modules/src/: main.rs  modulos.rs
traducao_codigo_maquina/: Cargo.toml  README.md
traducao_codigo_maquina/Ficheiros/: exemplo  teste  teste.asm  teste2  teste3  teste4  teste4.asm
traducao_codigo_maquina/src/: main.rs  processor.rs
vector_string_hashmap/src/: main.rs
